[gd_scene load_steps=13 format=3 uid="uid://5q3bikrnoama"]

[ext_resource type="Script" path="res://Scripts/fantasmas/azul.gd" id="1_1d56h"]
[ext_resource type="Texture2D" uid="uid://bdvmgugy482hv" path="res://Sprites/fantasmas/tristeza idel.png" id="2_txtyd"]
[ext_resource type="Texture2D" uid="uid://c6wyoc7l2sreq" path="res://Sprites/fantasmas/tristeza atack.png" id="3_r0o81"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2osrm"]
atlas = ExtResource("2_txtyd")
region = Rect2(0, 0, 47, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqgtl"]
atlas = ExtResource("2_txtyd")
region = Rect2(47, 0, 47, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_mls8c"]
atlas = ExtResource("2_txtyd")
region = Rect2(94, 0, 47, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpqpc"]
atlas = ExtResource("3_r0o81")
region = Rect2(0, 0, 47, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy3o8"]
atlas = ExtResource("3_r0o81")
region = Rect2(47, 0, 47, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_eog7t"]
atlas = ExtResource("3_r0o81")
region = Rect2(94, 0, 47, 49)

[sub_resource type="SpriteFrames" id="SpriteFrames_pwa8u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2osrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqgtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mls8c")
}],
"loop": true,
"name": &"azul_iddle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpqpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy3o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eog7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpqpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy3o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eog7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpqpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy3o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eog7t")
}],
"loop": false,
"name": &"azul_run",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8fvkr"]
radius = 6.79869

[sub_resource type="CircleShape2D" id="CircleShape2D_g8a5d"]
radius = 6.14636

[node name="azul" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_1d56h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pwa8u")
animation = &"azul_run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8fvkr")

[node name="cooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
autostart = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_g8a5d")
debug_color = Color(1, 0, 0.117647, 0.419608)

[node name="wall_detector" type="RayCast2D" parent="."]
position = Vector2(2, -11.3333)
target_position = Vector2(25, 0)
collide_with_areas = true

[node name="spawn_choro" type="Marker2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="body_shape_entered" from="hitbox" to="." method="_on_hitbox_body_shape_entered"]
